--- a/css/sass/pages/_main.scss
+++ b/css/sass/pages/_main.scss
@@ -8,7 +8,7 @@
   .pro-img {
     flex-basis: 50%;
     background: no-repeat center/cover;
-    background-image: url(../../../images/image-product-desktop.jpg);
+    background-image: url(../images/image-product-desktop.jpg);
     border-radius: 13px 0px 0px 13px;
   }
 
@@ -86,7 +86,7 @@
     .pro-img {
       height: 230px;
       border-radius: 13px 13px 0px 0px;
-      background-image: url(../../../images/image-product-mobile.jpg);
+      background-image: url(../images/image-product-mobile.jpg);
     }
     .pro-info {
       border-radius: 0px 0px 13px 13px;
