--- a/css/sass/pages/_main.scss
+++ b/css/sass/pages/_main.scss
@@ -75,8 +75,12 @@
       border-radius: 8px;
       font-size: 16px;
       font-weight: 500;
+      transition: 0.3s;
       color: $white;
       background-color: $main-color;
+      &:hover {
+        background-color: #1a4031;
+      }
     }
   }
 
